--- a/src/scss/_media.scss
+++ b/src/scss/_media.scss
@@ -347,6 +347,12 @@
 		}
 	}
 
+	.hall-of-fame {
+		&__img {
+			width: 33.3%;
+		}
+	}
+
 	.electronic-appeals {
 		&__form-left, &__form-right {
 			width: 100%;
@@ -765,7 +771,7 @@
 
 	.hall-of-fame {
 		&__img {
-			width: 100%;
+			width: 50%;
 		}
 	}
 
@@ -892,11 +898,25 @@
 		}
 	}
 
+	.hall-of-fame {
+		&__img {
+			width: 100%;
+		}
+	}
+
 	.electronic-appeals {
+		&__tabs {
+			&-btn {
+				padding: 17px 17px;
+			}
+		}
+
 		&__form {
 			&-input, &-textarea {
+				padding: 17px 10px;
+
 				&::placeholder {
-					font-size: 11px;
+					font-size: 14px;
 				}
 			}
 		}
@@ -1056,6 +1076,27 @@
 			span {
 				font-size: 15px;
 				margin-right: 10px;
+			}
+		}
+	}
+
+	.electronic-appeals {
+		&__form {
+			&-input, &-textarea {
+				&::placeholder {
+					font-size: 12px;
+				}
+			}
+
+			&-file {
+				label {
+					width: 100%;
+					text-align: center;
+				}
+			}
+
+			&-submit {
+				width: 100%;
 			}
 		}
 	}
