--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -91,7 +91,7 @@ body {
 		}
 	
 		&__item {
-			margin-right: 45px;
+			margin-right: 32px;
 			position: relative;
 
 			&:last-child {
@@ -113,6 +113,7 @@ body {
 		&__link {
 			color: $black;
 			position: relative;
+			padding-right: 15px;
 
 			&.have-children {
 				&:before {
@@ -121,11 +122,14 @@ body {
 					width: 10px;
 					height: 5px;
 					background-image: url("@img/language-arrow.svg");
+					background-repeat: no-repeat;
+					background-position: center;
 					position: absolute;
-					right: -15px;
-					top: 10px;
+					right: 0;
+					top: 50%;
+					height: 100%;
 					// top: 55%;
-					// transform: translateY(-45%);
+					transform: translateY(-50%);
 
 					// transform: translateY(-45%) rotate(180deg);
 					cursor: pointer;
@@ -905,6 +909,66 @@ body {
 	}
 }
 /* NEWS */
+
+/* NEW */
+.new {
+	&__imgs {
+		display: flex;
+		flex-wrap: wrap;
+		margin: 0 -10px;
+		// margin-bottom: 10px;
+	}
+
+	&__img {
+		width: 50%;
+		padding: 0 10px;
+		margin-bottom: 20px;
+	}
+
+	&__text {
+		
+	}
+}
+/* NEW */
+
+/* PAGE-CONTENT */
+.page__content {
+	img {
+		max-width: 100%;
+		height: auto;
+	}
+
+	a {
+		display: inline-block;
+		font-weight: 600;
+		line-height: 130%;
+		color: $green;
+		opacity: .7;
+		transition: .3s linear opacity;
+
+		&:hover {
+			opacity: 1;
+		}
+	}
+}
+/* PAGE-CONTENT */
+.products-item {
+	a {
+		display: inline-block;
+		font-weight: 600;
+		line-height: 130%;
+		color: $green;
+		opacity: .7;
+		transition: .3s linear opacity;
+
+		&:hover {
+			opacity: 1;
+		}
+	}
+}
+/* PRODUCTS-ITEM */
+
+/* PRODUCTS-ITEM */
 
 /* PAVILION */
 .pavilions {
@@ -1731,19 +1795,20 @@ body {
 
 		a {
 			color: #828282;
-			padding-bottom: 2px;
-			position: relative;
+			text-decoration: underline;
+			// padding-bottom: 2px;
+			// position: relative;
 
-			&:after {
-				content: "";
-				display: block;
-				position: absolute;
-				bottom: 0;
-				right: 0;
-				width: 100%;
-				height: 1px;
-				background-color: #828282;
-			}
+			// &:after {
+			// 	content: "";
+			// 	display: block;
+			// 	position: absolute;
+			// 	bottom: 0;
+			// 	right: 0;
+			// 	width: 100%;
+			// 	height: 1px;
+			// 	background-color: #828282;
+			// }
 		}
 	}
 
