--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1972,6 +1972,85 @@ body {
 }
 /* INTERNET-RESOURCES */
 
+/* ABOUT-COMPANY */
+.about-company {
+	&__title {
+
+	}
+	&__director {
+		&-info {
+			margin-bottom: 50px;
+		}
+
+		&-name {
+			font-weight: 600;
+			font-size: 24px;
+			line-height: 130%;
+			margin-bottom: 30px;
+		}
+
+		&-img {
+			max-width: 100%;
+		}
+	}
+
+	&__items {
+
+	}
+
+	&__item {
+		margin-bottom: 40px;
+
+		&:last-child {
+			margin-bottom: 0;
+		}
+	}
+
+	&-item {
+		&__inner {
+			display: flex;
+			align-items: flex-start; 
+		}
+
+		&__year {
+			// width: 18.7%;
+			min-width: 222px;
+			padding: 15px 22px;
+			background-color: #F2F2F2;
+			border: 2px solid $green;
+			margin-right: 81px;
+
+			// display: flex;
+			// justify-content: center;
+			// align-items: center;
+			text-align: center;
+
+			font-weight: 500;
+			font-size: 24px;
+			line-height: 150%;
+			color: $green;
+		}
+
+		&__text {
+			max-width: 889px;
+
+			p {
+				line-height: 150%;
+				margin-bottom: 15px;
+
+				&:last-child {
+					margin-bottom: 0;
+				}
+
+				span {
+					font-weight: 600;
+				}
+			}
+		}
+	}
+}
+/* ABOUT-COMPANY */
+
 
 .pagination {text-align: center;margin-top: 30px;}
 .pagination li {display: inline-block;padding: 2px;list-style-type: none;}
