--- a/src/scss/_media.scss
+++ b/src/scss/_media.scss
@@ -451,7 +451,7 @@
 				font-size: 20px;
 			}
 
-			&__text {
+			&__titles {
 				max-width: none;
 			}
 		}
@@ -463,7 +463,7 @@
 		}
 
 		&__item-left  {
-			margin-right: 0;
+			// margin-right: 0;
 			margin-bottom: 40px !important;
 		}
 
