add banners, table styles

--- a/src/scss/_media.scss
+++ b/src/scss/_media.scss
@@ -399,8 +399,12 @@
 		}
 	}
 
-	.internet-resources {
+	.slider {
 		padding: 0 0 90px;
+	}
+
+	.internet-resources {
+		padding: 90px 0;
 	}
 
 	.about-company {
