--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1935,9 +1935,13 @@ body {
 }
 /* BREADCRUMB */
 
+.slider {
+	padding: 0 0 120px;
+}
+
 /* INTERNET-RESOURCES */
 .internet-resources {
-	padding: 0 0 120px;
+	padding: 120px 0;
 
 	&__title {
 
@@ -2331,6 +2335,16 @@ body {
 }
 /* ORGANIZATION-WORK-PEOPLE */
 
+table {
+	width: 100%;
+	border-collapse: collapse;
+}
+table td, table th {
+	border: 1px solid black;
+}
+table tr:first-child th {
+	border-top: 0;
+}
 
 .pagination {text-align: center;margin-top: 30px;}
 .pagination li {display: inline-block;padding: 2px;list-style-type: none;}
