--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -2338,6 +2338,8 @@ body {
 table {
 	width: 100%;
 	border-collapse: collapse;
+	background-color: #ebebeb;
+	color: $white;
 }
 table td, table th {
 	border: 1px solid black;
